--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
 
 </head>
 <body>
+    <div class="container">
+        <h4 class="text-center">Carrito de Compras</h4>
+        <div class="contenido">
+            <div class="compras">
+
+            </div>
+            <div class="productos">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Item</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Acciones</th>
+                            <th scope="col">Total</th>
+                        </tr>
+                    </thead>
+                    <tbody id="items"></tbody>
+                    <tfoot>
+                        <tr id="footer">
+                            <th scope="row" colspan="5">
+                                Carrito Vacio - Compra ya !!
+                            </th>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div class="Productos">
+        <h4 class="text-center">Productos</h4>
+        <div class="row" id = "cards"></div>
+    </div>
    <script src="./js/app.js"></script> 
 </body>
 </html>
