--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de Compras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="container">
@@ -40,6 +40,51 @@
         <h4 class="text-center">Productos</h4>
         <div class="row" id = "cards"></div>
     </div>
+
+   <script src="./js/app.js"></script> 
+   </div>
+   <template id="template-footer">
+    <th scope="row" colspan="2">
+        Total de Productos
+    </th>
+    <td>10</td>
+    <td>
+        <button class="btn btn-danger btn-sm"
+            id="vaciar-carrito">
+            Vaciar Carrito
+        </button>
+    </td>   
+   </template>
+
+   <template id="template-carrito">
+    <tr>
+    <th scope="row">id</th>
+    <td>Cafe</td>
+    <td>1</td>
+    <td>
+        <button class="btn btn-success btn-sm">+</button>
+        <button class="btn btn-danger btn-sm">+</button>   
+    </td>
+    <td>
+        $<span>500</span>
+     </td>
+    </tr>
+   </template>
+
+   <template id="template-card">
+    <div class="col-12 md-6 mb-2">
+        <div class="card">
+        <img src="" alt="" srcset="" class="card-img-top">
+        <div class="card-body">
+            <h5>Titulo</h5>
+            <p>Precio</p>
+            <button class="btn btn-dark">
+                Comprar
+            </button>
+        </div>
+    </div>
+</div>
+   </template>
    <script src="./js/app.js"></script> 
 </body>
 </html>
