--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h4 class="text-center">Carrito de Compras</h4>
+        <h4 class="text-center">Francisco Santacruz Hernandez NUA : 147655 </h4>
         <div class="contenido">
             <div class="compras">
                 <table class="table">
